--- a/index.html
+++ b/index.html
@@ -15,5 +15,11 @@
             <a>購物車</a>
         </li>
     </nav>
+    <main>
+        <div class="card">
+            <div class="card__title">TITLE</div>
+            <div class="card__body">BODY</div>
+        </div>
+    </main>
 </body>
 </html>
