--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
             <div class="card__title">TITLE</div>
             <div class="card__body">BODY</div>
         </div>
+        <div class="card--info">
+            <div class="card__title">TITLE</div>
+            <div class="card__body">BODY</div>
+        </div>
     </main>
 </body>
 </html>
