refactor(card): 更新卡片樣式以統一背景顏色

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="card__title">TITLE</div>
             <div class="card__body">BODY</div>
         </div>
-        <div class="card--info">
+        <div class="card card-info">
             <div class="card__title">TITLE</div>
             <div class="card__body">BODY</div>
         </div>
