--- a/index.html
+++ b/index.html
@@ -6,30 +6,21 @@
     <title>Document</title>
     <link rel="stylesheet" href="dist/css/style.css">
 </head>
-<body>
-    <nav>
-        <li>
-            <a>首頁</a>
-        </li>
-        <li>
-            <a>購物車</a>
-        </li>
-    </nav>
-    <main>
-        <div class="card">
-            <div class="card__title">TITLE</div>
-            <div class="card__body">BODY</div>
-        </div>
-        <div class="card card-info">
-            <div class="card__title">TITLE</div>
-            <div class="card__body">BODY</div>
-        </div>
-        <hr>
-        <div class="d-flex">
-            <div class="col-12 cursor-pointer">cursor-pointer</div>
-            <div class="col-12 cursor-wait">cursor-wait</div>
-            <div class="col-12 cursor-cross">cursor-cross</div>
-        </div>
-    </main>
+
+<body class="theme-light">
+  <button onclick="setTheme('light')">Light</button>
+  <button onclick="setTheme('dark')">Dark</button>
+  <button onclick="setTheme('brand')">Brand</button>
+
+  <section>
+    <h1>Hello SCSS Theme</h1>
+    <button>Click Me</button>
+  </section>
+
+  <script>
+    function setTheme(name) {
+      document.body.className = `theme-${name}`;
+    }
+  </script>
 </body>
 </html>
