--- a/product.html
+++ b/product.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>現代電商購物網站</title>
+  <title>商品詳情 - ShopNow</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -23,23 +23,13 @@
     </div>
   </header>
   <main>
-    <section class="hero">
-      <h2>歡迎來到 ShopNow</h2>
-      <p>發現最新、最熱門的商品，享受現代化購物體驗！</p>
-      <a href="products.html" class="btn-primary">立即逛逛</a>
-    </section>
-    <section class="features">
-      <div class="feature">
-        <h3>快速配送</h3>
-        <p>下單後 24 小時內出貨，快速送達。</p>
-      </div>
-      <div class="feature">
-        <h3>安全付款</h3>
-        <p>多元安全付款方式，保障您的交易安全。</p>
-      </div>
-      <div class="feature">
-        <h3>精選商品</h3>
-        <p>嚴選高品質商品，滿足您的各種需求。</p>
+    <section class="product-detail">
+      <img src="src/images/phone1.png" alt="商品詳情">
+      <div class="detail-info">
+        <h2>商品名稱 1</h2>
+        <p class="price">$999</p>
+        <p>這是一個高品質的商品，適合各種需求，歡迎選購！</p>
+        <button class="btn-primary">加入購物車</button>
       </div>
     </section>
   </main>
