--- a/products.html
+++ b/products.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>現代電商購物網站</title>
+  <title>商品列表 - ShopNow</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -23,23 +23,27 @@
     </div>
   </header>
   <main>
-    <section class="hero">
-      <h2>歡迎來到 ShopNow</h2>
-      <p>發現最新、最熱門的商品，享受現代化購物體驗！</p>
-      <a href="products.html" class="btn-primary">立即逛逛</a>
-    </section>
-    <section class="features">
-      <div class="feature">
-        <h3>快速配送</h3>
-        <p>下單後 24 小時內出貨，快速送達。</p>
-      </div>
-      <div class="feature">
-        <h3>安全付款</h3>
-        <p>多元安全付款方式，保障您的交易安全。</p>
-      </div>
-      <div class="feature">
-        <h3>精選商品</h3>
-        <p>嚴選高品質商品，滿足您的各種需求。</p>
+    <section class="product-list">
+      <h2>商品列表</h2>
+      <div class="products-grid">
+        <div class="product-card">
+          <img src="src/images/phone1.png" alt="商品1">
+          <h3>商品名稱 1</h3>
+          <p class="price">$999</p>
+          <a href="product.html" class="btn-secondary">查看詳情</a>
+        </div>
+        <div class="product-card">
+          <img src="src/images/phone2.png" alt="商品2">
+          <h3>商品名稱 2</h3>
+          <p class="price">$1,299</p>
+          <a href="product.html" class="btn-secondary">查看詳情</a>
+        </div>
+        <div class="product-card">
+          <img src="src/images/phone3.png" alt="商品3">
+          <h3>商品名稱 3</h3>
+          <p class="price">$799</p>
+          <a href="product.html" class="btn-secondary">查看詳情</a>
+        </div>
       </div>
     </section>
   </main>
