feat(button): 新增按鈕樣式與功能，統一按鈕類別

--- a/cart.html
+++ b/cart.html
@@ -41,7 +41,7 @@
             <td>1</td>
             <td>$999</td>
             <td>$999</td>
-            <td><button class="btn-secondary">移除</button></td>
+            <td><button class="btn btn-secondary">移除</button></td>
           </tr>
         </tbody>
       </table>
@@ -49,7 +49,7 @@
         <span>總計：</span>
         <span class="total-price">$999</span>
       </div>
-      <button class="btn-primary">前往結帳</button>
+      <button class="btn btn-primary">前往結帳</button>
     </section>
   </main>
   <footer>
