--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <section class="hero">
       <h2>歡迎來到 ShopNow</h2>
       <p>發現最新、最熱門的商品，享受現代化購物體驗！</p>
-      <a href="products.html" class="btn-primary">立即逛逛</a>
+      <a href="products.html" class="btn btn-primary">立即逛逛</a>
     </section>
     <section class="features">
       <div class="feature">
@@ -44,8 +44,8 @@
     </section>
   </main>
   
-    <button type="button" class="btn" data-theme="light">Light</button>
-    <button type="button" class="btn" data-theme="dark">Dark</button>
+    <button type="button" class="btn btn-secondary" data-theme="light">Light</button>
+    <button type="button" class="btn btn-secondary" data-theme="dark">Dark</button>
 
   <footer>
     <div class="container">
