--- a/product.html
+++ b/product.html
@@ -29,7 +29,7 @@
         <h2>商品名稱 1</h2>
         <p class="price">$999</p>
         <p>這是一個高品質的商品，適合各種需求，歡迎選購！</p>
-        <button class="btn-primary">加入購物車</button>
+        <button class="btn btn-primary">加入購物車</button>
       </div>
     </section>
   </main>
