--- a/products.html
+++ b/products.html
@@ -30,19 +30,19 @@
           <img src="src/images/phone1.png" alt="商品1">
           <h3>商品名稱 1</h3>
           <p class="price">$999</p>
-          <a href="product.html" class="btn-secondary">查看詳情</a>
+          <a href="product.html" class="btn btn-secondary">查看詳情</a>
         </div>
         <div class="product-card">
           <img src="src/images/phone2.png" alt="商品2">
           <h3>商品名稱 2</h3>
           <p class="price">$1,299</p>
-          <a href="product.html" class="btn-secondary">查看詳情</a>
+          <a href="product.html" class="btn btn-secondary">查看詳情</a>
         </div>
         <div class="product-card">
           <img src="src/images/phone3.png" alt="商品3">
           <h3>商品名稱 3</h3>
           <p class="price">$799</p>
-          <a href="product.html" class="btn-secondary">查看詳情</a>
+          <a href="product.html" class="btn btn-secondary">查看詳情</a>
         </div>
       </div>
     </section>
