--- a/cart.html
+++ b/cart.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>購物車 - ShopNow</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="dist/css/main.css">
 </head>
-<body>
+<body class="theme-light">
   <header>
     <div class="container">
       <h1 class="logo">ShopNow</h1>
