--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 
     <h1>hello</h1>
 
-    <div class="my-section">
-        <div class="btn btn-special">HELLO1</div>
-        <div class="btn btn-secondary">HELLO2</div>
+    <div class="custom-container">
         <div class="btn btn-primary">HELLO3</div>
+        <div class="btn btn-secondary">HELLO2</div>
+        <div class="btn btn-info">HELLO1</div>
     </div>
     
         <button id="themeToggle" class="btn btn-outline-secondary position-fixed bottom-0 end-0 m-4">
